# lcafe-stanza-backend

./: .dockerignore  .gitignore  LICENSE.md  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
src/: __init__.py  main.py
src/api/: dependencies.py
src/api/middleware/: __init__.py  error_handling.py  logging_middleware.py
src/api/routes/: health.py  models.py  tokenize.py
src/core/: config.py
src/domain/: __init__.py
src/domain/models/: __init__.py  book.py  language.py  text.py  token.py
src/domain/services/: __init__.py  book_parser.py  text_parser.py  tokenizer.py
src/infrastructure/: __init__.py
